# dbus-cplusplus

./: README.GOOGLE  configure.ac  dbus-c++-1-uninstalled.pc.in
examples/async/: Makefile.am  async-client.cpp  async-client.h  async-introspect.xml  async-server.cpp  async-server.h
examples/echo/: Makefile.am  echo-client.cpp
examples/ecore/: Makefile.am
examples/glib/: Makefile.am
examples/properties/: Makefile.am
include/dbus-c++/: dispatcher.h  error.h  eventloop-integration.h  glib-integration.h  interface.h  message.h  object.h  property.h  types.h
src/: Makefile.am  connection.cpp  connection_p.h  dispatcher.cpp  glib-integration.cpp  interface.cpp  message.cpp  message_p.h  object.cpp  property.cpp  types.cpp
tools/: Makefile.am  adaptor-stubs.tpl  generate_adaptor.cpp  generate_proxy.cpp  generate_proxy.h  generate_stubs.cpp  generate_stubs.h  generator_utils.cpp  generator_utils.h  proxy-stubs.tpl  xml.cpp  xml.h  xml2cpp.cpp
